# claude-mem-analysis

./: .gitignore  LICENSE  README.md  claude_autonomous_analyst_framework.md  claude_quick_reference.md  claude_synthesis_prompt.txt  claude_synthesis_results.md  data_source_connection_guide.md  git_commit_memory_integration_design.md  git_integration_summary.md  memory-patter-analysis.sh  memory-pattern-analysis.sh  neo4j_import.cypher  pyproject.toml
config/: investigation_prompts.json
scripts/: cleanup-qwen.sh  retro-claude-consensus.sh  syn-claude-consensus.sh  warm-qwen.sh
src/: elasticsearch_importer.py  git_scanner.py  retro_claude.py  run_all.py  unified_analysis.py
src/retro/: __init__.py  analyst.py
src/shared/: __init__.py  pipeline.py
src/shared/analysis/: __init__.py
src/shared/database/: __init__.py  neo4j_importer.py  postgres_importer.py
src/syn/: __init__.py  curator.py  quality_analyzer.py
