[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retro-claude-analysis"
version = "0.1.0"
description = "retro-claude memory analysis system"
authors = [
    {name = "retro-claude Analysis Team"},
]
dependencies = [
    "psycopg2-binary",
    "toml",
    "requests",
    "neo4j",
    "elasticsearch",
]
requires-python = ">=3.8"

[project.scripts]
retro-claude = "src.retro_claude:main"
retro-claude-all = "src.run_all:main"
git-scanner = "src.git_scanner:main"
postgres-importer = "src.postgres_importer:main"
neo4j-importer = "src.neo4j_importer:main"
elasticsearch-importer = "src.elasticsearch_importer:main"
unified-analysis = "src.unified_analysis:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true