[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retro-claude-analysis"
version = "0.1.0"
description = "retro-claude memory analysis system"
authors = [
    {name = "retro-claude Analysis Team"},
]
dependencies = [
    "psycopg2-binary",
    "toml",
    "requests",
    "neo4j",
    "elasticsearch",
]
requires-python = ">=3.8"

[project.scripts]
retro-claude = "src.retro.analyst:main"
syn-claude = "src.syn.curator:main"
retro-claude-all = "src.run_all:main"
retro-claude-consensus = "scripts.retro-claude-consensus:main"
syn-claude-consensus = "scripts.syn-claude-consensus:main"
git-scanner = "src.shared.git_scanner:main"
postgres-importer = "src.shared.database.postgres_importer:main"
neo4j-importer = "src.shared.database.neo4j_importer:main"
elasticsearch-importer = "src.shared.database.elasticsearch_importer:main"
unified-analysis = "src.shared.analysis.unified_analysis:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true